--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #fondo{
-    background-image: url(imagenes/sale\ perfume.png);
+    background-image: url(imagenes/sale_perfume.png);
     width: 100%; 
     height: 600px; 
     background-attachment: fixed;
@@ -49,4 +49,9 @@ button{
     background-color:black;
     color: white;
     width: 100%;
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
