--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
 #fondo{
-    background-image: url(imagenes/sale_perfume.png);
     width: 100%; 
     height: 600px; 
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
     border: 1px;
     border-color: black;
 }
@@ -13,6 +9,14 @@ fieldset{
     width: 25%;
     margin-right: 2%;
     margin-left: 2%;
+    margin-bottom: 1%;
+    margin-top: 1%;
+}
+
+#fieldset{
+    width: 25%;
+    margin-right: 3%;
+    margin-left: 3%;
     margin-bottom: 1%;
     margin-top: 1%;
 }
