--- a/css/catalogo_mujeres.css
+++ b/css/catalogo_mujeres.css
@@ -1,3 +1,134 @@
+:root {
+    --color-primary: #4b6aff;
+}
+
+#logo-empresa {
+    width: 100px;
+    height: 100px;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    padding: 10px 30px 0 0;
+}
+
+nav > :is(h1, span.simbolos-materiales-deliniado){
+    width: 150px;
+    height: 34px;
+    display: grid;
+    place-items: center;
+}
+
+nav h1 {
+    background: #000000;
+    color: #c2e625;
+    font-family: "Great Vibes", cursive;
+    border-radius: 8px;
+    font-size: 24px
+}
+
+a {
+    cursor: pointer;
+}
+
+.menu {
+    padding: 0 100px 0 100px;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    height: 70px;
+}
+
+.menu li {
+    display: inline-block;
+    padding: 0 70px 0 70px;
+    width: 80px;
+    color: #0f0202;
+    transition: all 0.3s ease-in-out;
+    text-align:center;
+}
+
+.menu li:hover .submenu{
+    text-align: center;
+    height: 85px;
+}
+
+.menu > li:hover > a {
+    color: #fff;
+  }
+
+.menu > li:hover > a::before {
+    visibility: visible;
+    scale: 1 1;
+}
+
+.submenu {
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    width: 100%;
+    background-color: var(--color-primary);
+    height: 0;
+    line-height: 40px;
+    box-sizing: border-box;
+    transition: height 0.3s ease-in-out;
+}
+
+.menu li .submenu a {
+    color: #fff;
+    opacity: 0;
+    font-size: 16px;
+    transition: opacity 0.25s;
+}
+
+.menu > li:hover .submenu a {
+    opacity: 1;
+}
+
+.menu > li .submenu a:hover {
+    background: #00000033;
+}
+
+.menu > li a {
+    display: flex;
+    align-items:center;
+    justify-content:center;
+    padding: 0 7px;
+    font-size: 16px;
+    text-decoration: none;
+    position: relative;
+    height: 100%;
+    transition: 0.3s;
+}
+
+.menu > li > a::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    bottom: 3px;
+    left: 0px;
+    background-color: var(--color-primary);
+    transition: all 0.2s ease-in-out;
+    scale: 0 0;
+    visibility: hidden;
+}
+
+/*Hasta aqui e modificadado yo Att:Mauricio*/
+
+
 .contenedor{
     display: flex;
     justify-content: right;
