--- a/css/catalogo_hombre.css
+++ b/css/catalogo_hombre.css
@@ -2,9 +2,19 @@
     --color-primary: #4b6aff;
 }
 
-#logo-empresa {
-    width: 100px;
-    height: 100px;
+.contenedor-prin {
+    display: flex;
+    background: linear-gradient(to right, rgb(0, 0, 0), rgba(107, 243, 28, 0.685));
+    border: solid 2px rgb(104, 6, 6);
+    border-radius: 40px;
+    padding: 5px;
+    height: 70px;
+}
+
+.p-nav {
+    font-size: 20px;
+    font-weight:bold;
+    color: #ffffffab;
 }
 
 ul {
