--- a/css/catalogo_mujeres.css
+++ b/css/catalogo_mujeres.css
@@ -2,6 +2,21 @@
     --color-primary: #4b6aff;
 }
 
+.contenedor-prin {
+    display: flex;
+    background: linear-gradient(to right, rgb(0, 0, 0), rgba(107, 243, 28, 0.685));
+    border: solid 2px rgb(104, 6, 6);
+    border-radius: 40px;
+    padding: 5px;
+    height: 70px;
+}
+
+.p-nav {
+    font-size: 20px;
+    font-weight:bold;
+    color: #ffffffab;
+}
+
 #logo-empresa {
     width: 100px;
     height: 100px;
