--- a/css/catalogo_mujeres.css
+++ b/css/catalogo_mujeres.css
@@ -168,3 +168,23 @@ fieldset{
     margin-bottom: 2%;
     width: 20%;
 }
+footer {
+    background-color:  rgb(66, 63, 64);
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+}
+#Footer1{
+    text-align: left;
+    }
+#Footer2{
+        text-align: right;
+}
+img{
+        height: 100px;
+        width: 100px;
+}
+#parte1{
+        display: flex;
+        justify-content: center;
+}
