--- a/css/catalogo_hombre.css
+++ b/css/catalogo_hombre.css
@@ -9,6 +9,7 @@
     border-radius: 40px;
     padding: 5px;
     height: 70px;
+    margin: 15px 30px 0px 30px;
 }
 
 .p-nav {
@@ -140,24 +141,25 @@ a {
 
 
 .contenedor{
+    margin-top: 2%;
+    margin-bottom: 2%;
     display: flex;
     justify-content: right;
 }
 
 #division_catalogo{
-    display: flex;
-    justify-content: right;
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
-#hrch{
-    margin-top: 32px;
-    width: 28%;
-    height: 1px
+button{
+    width: 100%;
 }
 
 hr{
-    margin-top: 32px;
-    width: 40%;
+    margin-top: 29px;
+    width: 100%;
     height: 1px
 }
 
@@ -167,20 +169,6 @@ img{
     height: 300px;
 }
 
-button{
-    margin-top: 0 0 20px 0;
-    color: white;
-    background-color: black;
-    width: 100%;
-}
-
-fieldset{
-    margin-left: 6%;
-    margin-right: 6%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    width: 20%;
-}
 footer {
     background-color:  rgb(66, 63, 64);
     color: #fff;
@@ -188,7 +176,7 @@ footer {
     padding: 10px 0;
 }
 #Footer1{
-    margin-left: 25%;
+    margin-left: 20%;
 }
 
 #Footer2{
@@ -203,4 +191,9 @@ footer {
 .footer-img {
     width: 50px;
     height: 50px;
+}
+
+body{
+    margin: 0%;
+    padding: 0%;
 }
