--- a/css/catalogo_mujeres.css
+++ b/css/catalogo_mujeres.css
@@ -9,17 +9,13 @@
     border-radius: 40px;
     padding: 5px;
     height: 70px;
+    margin: 15px 30px 0px 30px;
 }
 
 .p-nav {
     font-size: 20px;
     font-weight:bold;
     color: #ffffffab;
-}
-
-#logo-empresa {
-    width: 100px;
-    height: 100px;
 }
 
 ul {
@@ -145,8 +141,26 @@ a {
 
 
 .contenedor{
+    margin-top: 2%;
+    margin-bottom: 2%;
     display: flex;
     justify-content: right;
+}
+
+#division_catalogo{
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+button{
+    width: 100%;
+}
+
+hr{
+    margin-top: 29px;
+    width: 100%;
+    height: 1px
 }
 
 img{
@@ -155,19 +169,6 @@ img{
     height: 300px;
 }
 
-button{
-    color: white;
-    background-color: black;
-    width: 100%;
-}
-
-fieldset{
-    margin-left: 6%;
-    margin-right: 6%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    width: 20%;
-}
 footer {
     background-color:  rgb(66, 63, 64);
     color: #fff;
@@ -175,7 +176,7 @@ footer {
     padding: 10px 0;
 }
 #Footer1{
-    margin-left: 25%;
+    margin-left: 20%;
 }
 
 #Footer2{
@@ -190,4 +191,9 @@ footer {
 .footer-img {
     width: 50px;
     height: 50px;
+}
+
+body{
+    margin: 0%;
+    padding: 0%;
 }
