--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body{
     border-radius: 40px;
     padding: 5px;
     height: 70px;
+    margin: 15px 30px 0px 30px;
 }
 
 .p-nav {
@@ -228,4 +229,9 @@ footer {
 .footer-img {
     width: 50px;
     height: 50px;
+}
+
+body{
+    margin: 0%;
+    padding: 0%;
 }
