--- a/formulario/formulario.css
+++ b/formulario/formulario.css
@@ -1,8 +1,16 @@
+.fondo-principal{
+    background-color: rgba(122, 91, 153, 0.5);
+}
+
 #debito{
     margin-left: 4%;
 }
 
 #div{
+    background: linear-gradient(rgba(224, 186, 116, 0.699), rgba(179, 123, 201, 0.568));
+    padding: 40px;
+    border: solid 4px rgb(32, 28, 73);
+    border-style: inset;
     margin-top: 3%;
     margin-bottom: 3%;
     width: 60%;
