--- a/css/style.css
+++ b/css/style.css
@@ -1,172 +1,35 @@
-#fondo{
-    width: 100%; 
-    height: 600px; 
-    border: 1px;
-    border-color: black;
+body {
+    color: #0C1A1A;
+    background-color: #6ACFC7;
 }
 
-body{
-    background-color: rgba(0, 0, 0, 0.253);
+.color-c{
+    color: #0C1A1A;
 }
 
-.contenedor-prin {
-    display: flex;
-    background: linear-gradient(to right, rgb(0, 0, 0), rgba(107, 243, 28, 0.685));
-    border: solid 2px rgb(104, 6, 6);
-    border-radius: 40px;
-    padding: 5px;
-    height: 70px;
-    margin: 15px 30px 0px 30px;
+header{
+    margin: 40px 0 40px 0;
+}
+ 
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
-.p-nav {
+.container-fluid{
     font-size: 20px;
-    font-weight:bold;
-    color: #ffffffab;
+    padding:0 0 0 40px;
+    height: 50px;
 }
 
-:root {
-    --color-primary: #4b6aff;
+.navbar-nav .nav-item {
+    margin-right: 40px; 
 }
 
-#logo-empresa {
-    width: 100px;
-    height: 100px;
-}
-
-ul {
-    margin: 0;
-    padding:0;
-    list-style: none;
-}
-
-nav{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-    padding: 10px 30px 0 0;
-}
-
-nav > :is(h1, span.simbolos-materiales-deliniado){
-    width: 150px;
-    height: 34px;
-    display: grid;
-    place-items: center;
-}
-
-nav h1 {
-    background: #000000;
-    color: #c2e625;
-    font-family: "Great Vibes", cursive;
-    border-radius: 8px;
-    font-size: 24px
-}
-
-a {
-    cursor: pointer;
-}
-
-.menu {
-    padding: 0 100px 0 100px;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
-    height: 70px;
-}
-
-.menu li {
-    display: inline-block;
-    padding: 0 70px 0 70px;
-    width: 80px;
-    color: #df6e6e;
-    transition: all 0.3s ease-in-out;
-    text-align:center;
-}
-
-.menu li:hover .submenu{
-    text-align: center;
-    height: 85px;
-}
-
-.menu > li:hover > a {
-    color: #fff;
-  }
-
-.menu > li:hover > a::before {
-    visibility: visible;
-    scale: 1 1;
-}
-
-.submenu {
-    overflow: hidden;
-    position: absolute;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
-    width: 100%;
-    background-color: var(--color-primary);
-    height: 0;
-    line-height: 40px;
-    box-sizing: border-box;
-    transition: height 0.3s ease-in-out;
-}
-
-.menu li .submenu a {
-    color: #fff;
-    opacity: 0;
-    font-size: 16px;
-    transition: opacity 0.25s;
-}
-
-.menu > li:hover .submenu a {
-    opacity: 1;
-}
-
-.menu > li .submenu a:hover {
-    background: #00000033;
-}
-
-.menu > li a {
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    padding: 0 7px;
-    font-size: 16px;
-    text-decoration: none;
-    position: relative;
-    height: 100%;
-    transition: 0.3s;
-}
-
-.menu > li > a::before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    bottom: 3px;
-    left: 0px;
-    background-color: var(--color-primary);
-    transition: all 0.2s ease-in-out;
-    scale: 0 0;
-    visibility: hidden;
-}
-
-fieldset{
-    width: 25%;
-    margin-right: 2%;
-    margin-left: 2%;
-    margin-bottom: 1%;
-    margin-top: 1%;
-}
-
-#fieldset{
-    width: 25%;
-    margin-right: 3%;
-    margin-left: 3%;
-    margin-bottom: 1%;
-    margin-top: 1%;
+header{
+    margin: 100px 0 20px 0;
 }
 
 img{
@@ -175,19 +38,32 @@ img{
     height: 300px;
 }
 
+.card{
+    background-color: rgba(255, 255, 255, 0.5); /* Color de fondo con transparencia */
+    padding: 20px;
+}
+
 .catalogo{
-    display: flex;
+    margin: 60px 0 60px 0;
+    width: 100%;
+    display:flex;
     justify-content:right;
+}
+
+.carousel-inner{
+    padding: 39px;
+    margin: auto;
+    width: 600px;
 }
 
 #encabezado_catalogo{
     display: flex;
-    justify-content: right;
+    margin:  auto;
 }
 
 hr{
     margin-top: 32px;
-    width: 40%;
+    width: 50%;
     height: 1px
 }
 
@@ -203,35 +79,36 @@ button{
     width: 100%;
 }
 
-a{
+
+a, .color{
     text-decoration: none;
-    color: black;
+    color: #6ACFC7;
 }
-footer {
-    background-color:  rgb(66, 63, 64);
-    color: #fff;
+
+/* Footer */
+footer{
     text-align: center;
-    padding: 10px 0;
-}
-#Footer1{
-    margin-left: 25%;
+    padding-block: 10px;
+    background-color: #0C1A1A;
 }
 
-#Footer2{
-    margin-left: 22%;
+#logo-footer{
+    border-radius: 10px;
+    width: 100px;
+    height: 100px;
+} 
+
+.link-column{
+    gap: 20px;
 }
 
-#parte1{
-    display: flex;
-    justify-content: left;
+.footer-container{
+    align-items: center;
+    justify-content: space-between;
 }
 
-.footer-img {
-    width: 50px;
+.footer-img{
+    width: 50px; /* Ajusta el tamaño de los iconos según sea necesario */
     height: 50px;
-}
-
-body{
-    margin: 0%;
-    padding: 0%;
+    margin-right: 55px; /* Espacio entre los iconos */
 }
