--- a/css/catalogo_chamacos.css
+++ b/css/catalogo_chamacos.css
@@ -52,11 +52,13 @@ button{
 }
 
 .card{
-  background-color: #0C1A1A;
-  color: #6ACFC7;
+  border: none;
+  background-color: #6ACFC7;
+  color: #0C1A1A;
 }
 
 img{
+    border-radius: 10px;
     position: relative;
     width: 100%;
     height: 300px;
@@ -70,7 +72,7 @@ img{
 /* Footer */
 footer{
   color: #6ACFC7;
-    height: 200px;
+    height: 150px;
     text-align: center;
     padding-block: 0;
     background-color: #0C1A1A;
@@ -103,3 +105,10 @@ footer{
     height: 50px;
     margin-right: 55px;   
   }
+
+  .card-body {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
