--- a/css/catalogo_hombre.css
+++ b/css/catalogo_hombre.css
@@ -40,8 +40,9 @@ header{
 }
 
 .card{
-  background-color: #0C1A1A;
-  color: #6ACFC7;
+  background-color: #6ACFC7;
+  color: #0C1A1A;
+  border: none;
 }
 
 .col-md-12{
@@ -52,6 +53,7 @@ button{
 }
 
 img{
+  border-radius: 10px;
     position: relative;
     width: 100%;
     height: 300px;
