--- a/formulario/formulario.css
+++ b/formulario/formulario.css
@@ -1,5 +1,5 @@
 .fondo-principal{
-    background-color: rgba(122, 91, 153, 0.5);
+    background-color: #6ACFC7;
 }
 
 #debito{
@@ -7,15 +7,18 @@
 }
 
 #div{
-    background: linear-gradient(rgba(224, 186, 116, 0.699), rgba(179, 123, 201, 0.568));
+    border-radius: 10px;
+    color: #6ACFC7;
+    background: #0C1A1A;
     padding: 40px;
-    border: solid 4px rgb(32, 28, 73);
-    border-style: inset;
     margin-top: 3%;
     margin-bottom: 3%;
     width: 60%;
 }
 
+input{
+    border-radius: 5px;
+}
 .seccion{
     margin-left: 2%;
     margin-right: 2%;
