--- a/sobre-nosotros/styles.css
+++ b/sobre-nosotros/styles.css
@@ -107,6 +107,7 @@ body {
     padding: 30px;
     background-color: #0C1A1A;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    color: #6ACFC7;
   }
   
     .product {
@@ -181,8 +182,8 @@ body {
 .espacio{
   margin-bottom: 40px ;
 }  
-  
- 
+
+
 /* Footer */
 footer{
   color: #6ACFC7;
