--- a/css/catalogo_hombre.css
+++ b/css/catalogo_hombre.css
@@ -1,6 +1,6 @@
 body{
-  color: #0C1A1A;
-  background-color: #6ACFC7;
+  color: #d42c5b;
+  background-color: #f2e9eb;
   margin: 0%;
   padding: 0%;
 }
@@ -40,8 +40,8 @@ header{
 }
 
 .card{
-  background-color: #6ACFC7;
-  color: #0C1A1A;
+  background-color: #f2e9eb;
+  color: #31383f;
   border: none;
 }
 
