--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-    color: #0C1A1A;
-    background-color: #6ACFC7;
+    color: #d42c5b;
+    background-color: #f2e9eb;
 }
 
 .color-c{
@@ -47,8 +47,8 @@ img{
 
 .card{
     border: none;
-    background-color: #6ACFC7;
-    color: #0C1A1A;
+    background-color: #f2e9eb;
+    color: #31383f;
     padding: 20px;
 }
 
