--- a/sobre-nosotros/styles.css
+++ b/sobre-nosotros/styles.css
@@ -1,8 +1,8 @@
 body {
+    color: #d42c5b;
+    background-color: #f2e9eb;
     margin: 0;
     padding: 0;
-    color: #0C1A1A;
-    background-color: #6ACFC7;
     margin: 0%;
     padding: 0%;
 }
@@ -105,9 +105,9 @@ body {
     max-width: 1100px;
     margin: 0 auto;
     padding: 30px;
-    background-color: #0C1A1A;
+    background-color: #6ACFC7 ;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    color: #6ACFC7;
+    color: #f2e9eb;
   }
   
     .product {
@@ -115,7 +115,7 @@ body {
       align-items: center;
       margin-bottom: 40px;
       width: 100%;
-      background-color: #0C1A1A;
+      background-color: #6ACFC7;
       border-radius: 10px;
       box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
      }
@@ -144,7 +144,7 @@ body {
   }
   
   p {
-    color: #6ACFC7;
+    color: #31383f;
     font-size: 1.2em;
     margin-top: 15px;
   }
@@ -152,7 +152,7 @@ body {
   
   h2 {
     font-size: 1.8em;
-    color: #950cbe;
+    color: #0C1A1A;
     margin-top: 20px;
   }
   
