--- a/contacto/styles.css
+++ b/contacto/styles.css
@@ -105,41 +105,41 @@ button:hover {
 
 /* Footer */
 footer{
-    height: 150px;
-    text-align: center;
-    padding-block: 0;
-    background-color: #0C1A1A;
-    color: #6ACFC7;
-  }
-  
-  #logo-footer{
-    border-radius: 10px;
-    width: 100px;
-    height: 100px;
-  } 
-  
-  .link-column{
-    gap: 20px;
-  }
-  
-  a {
-    color: #6ACFC7;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  
-  
-  .footer-container{
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .footer-img{
-    width: 50px; 
-    height: 50px;
-    margin-right: 55px;   
-  }
-body{
-    margin: 0%;
-    padding: 0%;
+  height: 300px;
+  text-align: center;
+  padding-block: 0;
+  background-color: #0C1A1A;
+  color: #6ACFC7;  
+}
+
+#logo-footer{
+  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+} 
+
+.link-column{
+  gap: 20px;
+}
+
+h4{
+  padding-top: 8%;
+}
+
+a{
+  color: #6ACFC7;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+
+.footer-container{
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-img{
+  width: 50px; 
+  height: 50px;
+  margin-right: 55px;   
 }
