--- a/css/catalogo_hombre.css
+++ b/css/catalogo_hombre.css
@@ -33,16 +33,10 @@ header{
     justify-content: right;
 }
 
-#division_catalogo{
-    display: inline-flex;
-    text-align: center;
-    margin: auto;
-}
-
 .card{
+  border: none;
   background-color: #6ACFC7;
   color: #0C1A1A;
-  border: none;
 }
 
 .col-md-12{
@@ -53,7 +47,7 @@ button{
 }
 
 img{
-  border-radius: 10px;
+    border-radius: 10px;
     position: relative;
     width: 100%;
     height: 300px;
@@ -65,7 +59,7 @@ img{
 
 /* Footer */
 footer{
-    height: 150px;
+    height: 300px;
     text-align: center;
     padding-block: 0;
     background-color: #0C1A1A;
@@ -82,6 +76,10 @@ footer{
     gap: 20px;
   }
   
+  h4{
+    padding-top: 8%;
+  }
+
   a{
     color: #6ACFC7;
     text-decoration: none;
