--- a/css/style.css
+++ b/css/style.css
@@ -67,18 +67,19 @@ img{
 
 #encabezado_catalogo{
     display: flex;
-    margin:  auto;
 }
 
 hr{
-    margin-top: 32px;
-    width: 50%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 20px;
+    width: 40%;
     height: 1px
 }
 
 #hr{
-    margin-top: 32px;
-    width: 35%;
+    margin-top: 20px;
+    width: 32%;
     height: 1px
 }
 
@@ -96,34 +97,41 @@ a, .color{
 
 /* Footer */
 footer{
+    height: 300px;
     text-align: center;
-    padding-block: 10px;
+    padding-block: 0;
     background-color: #0C1A1A;
-}
-
-#logo-footer{
+    color: #6ACFC7;  
+  }
+  
+  #logo-footer{
     border-radius: 10px;
     width: 100px;
     height: 100px;
-} 
-
-.link-column{
+  } 
+  
+  .link-column{
     gap: 20px;
-}
+  }
+  
+  h4{
+    padding-top: 8%;
+  }
 
-.footer-container{
+  a{
+    color: #6ACFC7;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+  
+  
+  .footer-container{
     align-items: center;
     justify-content: space-between;
-}
-
-.footer-img{
+  }
+  
+  .footer-img{
     width: 50px; 
     height: 50px;
-    margin-right: 55px; 
-}
-
-.card-body {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
+    margin-right: 55px;   
+  }
