--- a/css/catalogo_mujeres.css
+++ b/css/catalogo_mujeres.css
@@ -30,7 +30,7 @@ header{
 .contenedor{
     margin: auto;
     display: flex;
-    justify-content: right;
+    justify-content: center;
 }
 
 .card{
