--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ img{
     margin: 60px 0 60px 0;
     width: 100%;
     display:flex;
-    justify-content:right;
+    justify-content:center;
 }
 
 .carousel-inner{
@@ -67,6 +67,7 @@ img{
 
 #encabezado_catalogo{
     display: flex;
+
 }
 
 hr{
