--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/*contador*/
+#contador-visitas {
+    width: 100px; 
+    height: auto; 
+    margin: 0 auto; 
+    text-align: center; 
+}
+
+#contador-visitas img {
+    width: 100%; 
+    height: auto; 
+}
+
 body {
     color: #d42c5b;
     background-color: #f2e9eb;
